@@ -20,8 +20,8 @@ import static org.hamcrest.Matchers.*;
 public class DefaultBalanceCalculatorTest {
 
     private final BalanceCalculator balanceCalculator = new DefaultBalanceCalculator();
-    Friend friendSonia = new Friend("Sonia", 1);
-    Friend friendPaco = new Friend("Paco", 2);
+    Friend friendSonia = new Friend("Sonia", 1, 1);
+    Friend friendPaco = new Friend("Paco", 1, 2);
 
 
     @Test
@@ -32,15 +32,15 @@ public class DefaultBalanceCalculatorTest {
 
     @Test
     public void shouldCalculateBalanceWithoutPayments(){
-        List<Balance> result = balanceCalculator.calculateBalance(Collections.emptyList(), List.of(new Friend("Paco", 1)));
-        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(0, 2), new Friend("Paco", 1)))));
+        List<Balance> result = balanceCalculator.calculateBalance(Collections.emptyList(), List.of(new Friend("Paco",1, 1)));
+        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(0, 2), new Friend("Paco", 1, 1)))));
     }
 
     @Test
     public void shouldCalculateBalanceWithOnePaymentAndFriend(){
         Payment payment = new Payment("concepto test", BigDecimal.valueOf(20), 1, LocalDateTime.now());
         List<Balance> result = balanceCalculator.calculateBalance(List.of(payment), List.of(friendSonia));
-        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(0, 2), new Friend("Sonia", 1)))));
+        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(0, 2), new Friend("Sonia",1, 1)))));
     }
 
     @Test
@@ -48,8 +48,8 @@ public class DefaultBalanceCalculatorTest {
         Payment payment = new Payment("concepto test", BigDecimal.valueOf(20), 1, LocalDateTime.now());
         List<Balance> result = balanceCalculator.calculateBalance(List.of(payment), List.of(friendSonia, friendPaco));
 
-        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(-10.00).setScale(2), new Friend("Sonia", 1)),
-                new Balance(BigDecimal.valueOf(10.00).setScale(2), new Friend("Paco", 2)))));
+        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(-10.00).setScale(2), new Friend("Sonia", 1, 1)),
+                new Balance(BigDecimal.valueOf(10.00).setScale(2), new Friend("Paco", 1, 2)))));
     }
 
     @Test
@@ -59,8 +59,8 @@ public class DefaultBalanceCalculatorTest {
         Payment payment3 = new Payment("concepto test", BigDecimal.valueOf(20), 2, LocalDateTime.now());
         List<Balance> result = balanceCalculator.calculateBalance(List.of(payment1, payment2, payment3), List.of(friendSonia, friendPaco));
 
-        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(-10).setScale(2), new Friend("Sonia", 1)),
-                new Balance(BigDecimal.valueOf(10).setScale(2), new Friend("Paco", 2)))));
+        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(-10).setScale(2), new Friend("Sonia",1,  1)),
+                new Balance(BigDecimal.valueOf(10).setScale(2), new Friend("Paco", 1, 2)))));
     }
 
     @Test
@@ -70,14 +70,14 @@ public class DefaultBalanceCalculatorTest {
         Payment payment3 = new Payment("concepto test", BigDecimal.valueOf(20), 2, LocalDateTime.now());
         List<Balance> result = balanceCalculator.calculateBalance(List.of(payment1, payment2, payment3), List.of(friendSonia, friendPaco));
 
-        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(-10.25), new Friend("Sonia", 1)),
-                new Balance(BigDecimal.valueOf(10.25), new Friend("Paco", 2)))));
+        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(-10.25), new Friend("Sonia", 1, 1)),
+                new Balance(BigDecimal.valueOf(10.25), new Friend("Paco",1, 2)))));
     }
 
     @Test
     public void shouldCompareTwoBalances(){
-        Balance balance1 = new Balance(BigDecimal.valueOf(10), new Friend("Sonia",1));
-        Balance balance2 = new Balance(BigDecimal.valueOf(20), new Friend("Paco", 2));
+        Balance balance1 = new Balance(BigDecimal.valueOf(10), new Friend("Sonia",1, 1));
+        Balance balance2 = new Balance(BigDecimal.valueOf(20), new Friend("Paco", 1, 2));
 
         int resultado = balance1.compareTo(balance2);
 
@@ -86,9 +86,9 @@ public class DefaultBalanceCalculatorTest {
 
     @Test
     public void shouldSortBalanceList(){
-        Balance balance20 = new Balance(BigDecimal.valueOf(20), new Friend("Sonia", 1));
-        Balance balance10 = new Balance(BigDecimal.valueOf(10), new Friend("Sonia", 2));
-        Balance balance30 = new Balance(BigDecimal.valueOf(30), new Friend("Paco", 2));
+        Balance balance20 = new Balance(BigDecimal.valueOf(20), new Friend("Sonia",1,  1));
+        Balance balance10 = new Balance(BigDecimal.valueOf(10), new Friend("Sonia",1,  2));
+        Balance balance30 = new Balance(BigDecimal.valueOf(30), new Friend("Paco",1,  2));
 
         List<Balance> list = new ArrayList<>();
         list.add(balance20);
@@ -97,9 +97,9 @@ public class DefaultBalanceCalculatorTest {
 
         Collections.sort(list, Collections.reverseOrder());
 
-        assertThat(list, contains(new Balance(BigDecimal.valueOf(30), new Friend("Paco", 2)),
-                new Balance(BigDecimal.valueOf(20), new Friend("Sonia", 1)),
-                new Balance(BigDecimal.valueOf(10), new Friend("Sonia", 1))));
+        assertThat(list, contains(new Balance(BigDecimal.valueOf(30), new Friend("Paco",1, 2)),
+                new Balance(BigDecimal.valueOf(20), new Friend("Sonia",1, 1)),
+                new Balance(BigDecimal.valueOf(10), new Friend("Sonia",1, 1))));
 
     }
 }
